--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			</div>
 	  <!--SideMenu-->
-			<a href="#" data-activates="mobile-demo" class="button-collapse left"><i class="material-icons">menu</i></a>
+			<a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
 			<ul class="side-nav black" style="width:250px" id="mobile-demo">
 				<li><a target="_self" href="index.html"><span class="white-text"><h5>最新新聞</h5></span></a></li>
 				<div class="divider"></div>
@@ -121,8 +121,8 @@
 		</div>
 		<br>
 		<h5> &nbsp &nbsp Latest News</h5>
-		<button onclick="changeCol(1)">click me</button>
-		<button onclick="changeCol(0)">click me</button>
+		<button class="btn grey" onclick="changeCol(1)"><i class="material-icons">reorder</i></button>
+		<button class="btn grey" onclick="changeCol(0)"><i class="material-icons">apps</i></button>
 		<div class="divider grey lighten-3"> </div>
 		<br>
 		</div>
@@ -134,7 +134,7 @@
 		</div>
 		</div>
 		
-	  <div class="col s12 m4" style="background-color:#e0e0e0;">
+	  <div class="col s12 m4 hide-on-small-only" style="background-color:#e0e0e0;">
 		<div class="row" >
 		<div class="col s12 m12" >
 		<br style="color:#e0e0e0">
