--- a/video.html
+++ b/video.html
@@ -14,7 +14,7 @@
 	
 	  <script>
 		$(document).ready(function(){
-		$('.button-collapse').sideNav();
+			$('.button-collapse').sideNav();
 		});
 		
 		var q;
@@ -23,7 +23,7 @@
 			
 			$('#display_box').html('');
 			
-			
+			$('#button_box').html('');
 			q = $('#search_input').val();
 			
 			$.get(
