--- a/video.html
+++ b/video.html
@@ -179,7 +179,7 @@
 		
 		
 		function setdiv(x){
-			var url="http://www.youtube.com/embed/"+x+"?rel=0";
+			var url="https://www.youtube.com/embed/"+x+"?rel=0";
 			$('#playing_box').html('<iframe id="playing" src="'+url+'" style="padding:30px;" frameborder="0" allowfullscreen></iframe>');
 			
 			 $('html,body').animate({
